# LlamaLift

./: Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
src/: main.rs
src/app/: config.rs  mod.rs  ollama.rs  state.rs  utils.rs
src/app/ui/: mod.rs  widgets.rs
src/app/ui/views/: download_view.rs  manage_models_view.rs  mod.rs
src/app/ui/windows/: about_window.rs  delete_confirmation_window.rs  mod.rs  select_columns_window.rs  settings_window.rs
